FIX: Word search layout gaps
Former-commit-id: cebd90428fa07f8c7425dbc187fa006eada3c41e

--- a/src/renderer/assets/styles/components/word-search.scss
+++ b/src/renderer/assets/styles/components/word-search.scss
@@ -21,7 +21,7 @@
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
             grid-template-areas: "." "." "." "." "." ".";
             padding: 6px;
-            width: 263px;
+            width: 258px;
             .letters{
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
@@ -33,7 +33,7 @@
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
             grid-template-areas: "." "." "." "." "." "." ".";
             padding: 6px;
-            width: 307px;
+            width: 300px;
             .letters{
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
@@ -45,7 +45,7 @@
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
             grid-template-areas: "." "." "." "." "." "." "." ".";
             padding: 6px;
-            width: 345px;
+            width: 340px;
             .letters{
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
@@ -57,7 +57,7 @@
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
             grid-template-areas: "." "." "." "." "." "." "." "." ".";
             padding: 6px;
-            width: 384px;
+            width: 381px;
             .letters{
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
@@ -69,7 +69,7 @@
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
             grid-template-areas: "." "." "." "." "." "." "." "." "." ".";
             padding: 6px;
-            width: 423px;
+            width: 422px;
             .letters{
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
                 grid-template-rows: 1fr;
